<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iOS 8 LWP</string>
    <string name="title">iOS 8 LWP</string>
    <string name="author">Kivvi Studio</string>
    <string name="description">iOS 8\'s live wallpaper.</string>
    
    <string name="button1_text">Setting</string>
    <string name="button2_text">Next</string>
    <string name="thanks_message">Thank you for installing iOS 8 live wallpaper. Please enjoy it!</string>
    <string name="next_message">Tap \'Next\' and select \'Galaxy 3D\' from the following screen to set this wallpaper.</string>
    <string name="setting_message">Tap \'Setting\' to customize your wallpaper.</string>
    <string name="copyright">Copyright 2014 Kivvi Studio.</string>
    
    <string name="wave">Wave</string>
    <string name="wave_summary">Enable Wave Effect</string>
    <string name="twinkle">Twinkle</string>
    <string name="twinkle_summary">Enable Spot Twinkle</string>
    <string name="gsensor">G-Sensor</string>
    <string name="gsensor_summary">Enable G-Sensor</string>
    
    <string name="customization">CUSTOMIZATION</string>
    <string name="social">SOCIAL</string>
    <string name="information">INFORMATION</string>
    <string name="rate">Rate This App</string>
    <string name="rate_message">Rate this app and tell us how we are doing</string>
    <string name="share">Share</string>
    <string name="share_message">Pride share this app with friends</string>
    <string name="share_message_long">Hey! Download this great live wallpaper!</string>
    <string name="designer">Designer</string>
    <string name="designer_message">Kivvi Studio</string>
    <string name="about">About Kivvi Studio</string>
    <string name="about_message">Our team focus on live wallpaper. Contact us: kivvi.service@gmail.com</string>
</resources>